Add startmeeting js and html

--- a/public/receivemessage.html
+++ b/public/receivemessage.html
@@ -15,8 +15,7 @@
 </head>
 <body>
 
-<div id="chat-view" class="view">
-  <div id="chat-name"></div>
+<div class="view">
   <br/>
   <div id="message-list">
     <ul id="chat-messages" class="list-group"></ul>
