--- a/public/onetimepin.html
+++ b/public/onetimepin.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div id="chat-view" class="view">
+<div class="view">
   <div>
     <button class="btn btn-primary" onclick="handleGetOnetimePin()">Get one-time PIN</button>
   </div>
