--- a/public/authexample.html
+++ b/public/authexample.html
@@ -19,20 +19,13 @@
 
 <body>
 
+  <button id="auth-button" type="button" class="btn btn-primary unauth-item">Log in</button>
+  <button id="unauth-button" type="button" class="btn btn-primary auth-item">Sign out</button>
 
-
-                    <button id="auth-button" type="button" class="btn btn-primary unauth-item">Log in</button>
-                    <button id="unauth-button" type="button" class="btn btn-primary auth-item">Sign out</button>
-
-
-
-
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-    <script src="js/sdk-0.1.2.js"></script>
-    <!-- <script src="https://g.app.chime.aws/embed/sdk-0.1.1.js"></script> -->
-    <script src="js/authexample.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://g.app.chime.aws/embed/sdk-0.1.2.js"></script>
+  <script src="js/authexample.js"></script>
 
 </body>
 
