--- a/public/button.html
+++ b/public/button.html
@@ -15,20 +15,19 @@
 </head>
 <body>
 
-<div class="view">
-  <div>
-    <button class="btn btn-primary" onclick="onButtonClick()">Button</button>
+  <div class="view">
+    <div>
+      <button class="btn btn-primary" onclick="onButtonClick()">Button</button>
+    </div>
+
+    <textarea id="text-output" rows="4" cols="50">Output goes here</textarea>
+
   </div>
 
-  <textarea id="text-output" rows="4" cols="50">Output goes here</textarea>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-</div>
-
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-<script src="js/sdk-0.1.2.js"></script>
-<!-- <script src="https://g.app.chime.aws/embed/sdk-0.1.1.js"></script> -->
-<script src="js/button.js"></script>
+  <script src="https://g.app.chime.aws/embed/sdk-0.1.2.js"></script>
+  <script src="js/button.js"></script>
 </body>
 </html>
