--- a/public/onetimepin.html
+++ b/public/onetimepin.html
@@ -15,20 +15,19 @@
 </head>
 <body>
 
-<div class="view">
-  <div>
-    <button class="btn btn-primary" onclick="handleGetOnetimePin()">Get one-time PIN</button>
+  <div class="view">
+    <div>
+      <button class="btn btn-primary" onclick="handleGetOnetimePin()">Get one-time PIN</button>
+    </div>
+    <div id="pin-list">
+      <ul id="pin" class="list-group"></ul>
+    </div>
   </div>
-  <div id="pin-list">
-    <ul id="pin" class="list-group"></ul>
-  </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-<script src="js/sdk-0.1.2.js"></script>
-<!-- <script src="https://g.app.chime.aws/embed/sdk-0.1.1.js"></script> -->
-<script src="js/onetimepin.js"></script>
+  <script src="https://g.app.chime.aws/embed/sdk-0.1.2.js"></script>
+  <script src="js/onetimepin.js"></script>
 </body>
 </html>
