--- a/public/receivemessage.html
+++ b/public/receivemessage.html
@@ -15,18 +15,17 @@
 </head>
 <body>
 
-<div class="view">
-  <br/>
-  <div id="message-list">
-    <ul id="chat-messages" class="list-group"></ul>
+  <div class="view">
+    <br/>
+    <div id="message-list">
+      <ul id="chat-messages" class="list-group"></ul>
+    </div>
   </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-<script src="js/sdk-0.1.2.js"></script>
-<!-- <script src="https://g.app.chime.aws/embed/sdk-0.1.1.js"></script> -->
-<script src="js/receivemessage.js"></script>
+  <script src="https://g.app.chime.aws/embed/sdk-0.1.2.js"></script>
+  <script src="js/receivemessage.js"></script>
 </body>
 </html>
