--- a/public/sendmessage.html
+++ b/public/sendmessage.html
@@ -29,9 +29,7 @@
 
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-  <script src="js/sdk-0.1.2.js"></script>
-  <!-- <script src="https://g.app.chime.aws/embed/sdk-0.1.1.js"></script> -->
+  <script src="https://g.app.chime.aws/embed/sdk-0.1.2.js"></script>
   <script src="js/sendmessage.js"></script>
 </body>
 </html>
