--- a/public/startmeeting.html
+++ b/public/startmeeting.html
@@ -15,21 +15,20 @@
 </head>
 <body>
 
-<div class="view">
-  <div>
-    <button class="btn btn-primary" onclick="handleStartInstantMeeting(true)">Start instant meeting</button>
+  <div class="view">
+    <div>
+      <button class="btn btn-primary" onclick="handleStartInstantMeeting(true)">Start instant meeting</button>
+    </div>
+    <br/>
+    <div>
+      <button class="btn btn-primary" onclick="handleStartInstantMeeting(false)">Start instant meeting with one-time PIN</button>
+    </div>
   </div>
-  <br/>
-  <div>
-    <button class="btn btn-primary" onclick="handleStartInstantMeeting(false)">Start instant meeting with one-time PIN</button>
-  </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
-<script src="js/sdk-0.1.2.js"></script>
-<!-- <script src="https://g.app.chime.aws/embed/sdk-0.1.1.js"></script> -->
-<script src="js/startmeeting.js"></script>
+  <script src="https://g.app.chime.aws/embed/sdk-0.1.2.js"></script>
+  <script src="js/startmeeting.js"></script>
 </body>
 </html>
