--- a/public/scheduler.html
+++ b/public/scheduler.html
@@ -7,14 +7,17 @@
 
   <title>Amazon Chime Web SDK</title>
 
-  <!-- Custom styles -->
+  <!-- Web SDK styles -->
   <link href="https://g.app.chime.aws/embed/scheduler-0.1.3.css" rel="stylesheet">
 </head>
 <body>
 
-  <div id="chime-meeting-scheduler" style="width: 400px; height: 600px;"/>
+  <div id="chime-meeting-scheduler" style="width: 400px; height: 600px;"></div>
 
-  <script src="js/scheduler.js"></script>
+  <!-- Web SDK script -->
   <script src="https://g.app.chime.aws/embed/scheduler-0.1.3.js"></script>
+
+  <!-- Local script -->
+  <script src="js/scheduler.js"></script>
 </body>
 </html>
